# BIF

./: .gitignore  README.md  pyproject.toml  requirements.txt
bif_sweep_patch/: README_PATCH.md
bif_sweep_patch/configs/: example_sweep_bif.yaml
bif_sweep_patch/src/bif/analysis/: sweep_diagnostics.py  sweep_runner.py
bif_sweep_patch/tests/: test_sweep_diagnostics.py
configs/: example_analyze_bif.yaml  example_run_bif.yaml  example_sweep_bif.yaml
data/: pool_800.jsonl  pool_gsm8k_20.jsonl  query_gsm8k_20.jsonl  query_gsm8k_20_answer_only.jsonl  query_gsm8k_20_with_answer.jsonl
scripts/: convert_alignment_to_bif_jsonl.py
src/bif/: __init__.py  cli.py  config.py  constants.py  io.py
src/bif/analysis/: __init__.py  bif_analyzer.py  bif_runner.py  extractor.py  sweep_diagnostics.py  sweep_runner.py
src/bif/data/: __init__.py  dataset.py
src/bif/training/: __init__.py  loss.py  sgld.py
src/bif/utils/: __init__.py  logging.py  naming.py  tracker.py
tests/: test_bif_sampling_alignment.py
